fix overflow on long order

--- a/src/css/Checkout.scss
+++ b/src/css/Checkout.scss
@@ -25,3 +25,8 @@
 .checkout-topping {
   color:$red;
 }
+
+.checkout-list {
+  overflow-y: scroll;
+  max-height: 470px;
+}
